--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Bank Account</title>
+    <title>Login Page</title>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
     <section class="max-w-[400px] mx-auto bg-gray-200 p-[20px] mt-10 rounded-lg">
         <h2 class="text-xl font-medium mb-2">Please Login...</h2>
         <div>
-            <input id="email-field" type="text" class="w-full p-1 rounded-md text-base px-2 mb-2" placeholder="Email Address">
-            <input id="password-field" type="text" class="w-full p-1 rounded-md text-base px-2" placeholder="Password">
-            <button class="bg-gray-600 text-white py-1 px-3 rounded-lg inline-block mt-2 focus:ring-4 focus:ring-gray-300 hover:bg-gray-700">Submit</button>
+            <input id="email-field" type="email" class="w-full p-1 rounded-md text-base px-2 mb-2" placeholder="Email Address" required>
+            <input id="password-field" type="password" class="w-full p-1 rounded-md text-base px-2" placeholder="Password" required>
+            <button id="submit-btn" class="bg-gray-600 text-white py-1 px-3 rounded-lg inline-block mt-2 focus:ring-4 focus:ring-gray-300 hover:bg-gray-700">Submit</button>
         </div>
     </section>
 </body>
