--- a/bank.html
+++ b/bank.html
@@ -62,5 +62,6 @@
 </body>
 
 <script src="js/deposit.js"></script>
+<script src="js/withdraw.js"></script>
 <script src="js/utilities.js"></script>
 </html>
